--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   email: gelitenight@gmail.com
   facebook:
   flickr:
-  github: https://github.com/gelitenight
+  github: gelitenight
   instagram:
   linkedin:
   pinterest:
