--- a/_config.yml
+++ b/_config.yml
@@ -56,6 +56,8 @@ baseurl: ""
 markdown: redcarpet
 highlighter: pygments
 permalink: /:title/
+redcarpet:
+  extensions: ["smart", "tables", "no_intra_emphasis", "fenced_code_blocks", "disable_indented_code_blocks", "autolink", "strikethrough", "superscript", "with_toc_data", "hard_wrap"]
 
 # The release of Jekyll Now that you're using
 version: v1.1.0
